# simulatte-niobe

./: .gitignore  BUILD_SPEC.md  NIOBE_BUILD_SPEC_V2.md  NIOBE_CAPABILITY_SPEC.md  V1_SYSTEM_DEFINITION.md  pyproject.toml
niobe/: __init__.py  presets.py  runner.py  study_request.py
tests/: test_concurrency_guardrail.py  test_niobe_geo_presets.py  test_niobe_scaffold.py
